--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,32 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Hello World!"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+  <EditText
+    android:id="@+id/edt_email"
+    android:hint="email"
+    android:inputType="textEmailAddress"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"/>
+
+  <EditText
+    android:id="@+id/edt_password"
+    android:hint="password"
+    android:inputType="textPassword"
+    app:layout_constraintTop_toBottomOf="@+id/edt_email"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"/>
+
+  <Button
+    android:id="@+id/btn_login"
+    android:text="Login"
+    app:layout_constraintTop_toBottomOf="@+id/edt_password"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"/>
 
 </android.support.constraint.ConstraintLayout>
